--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
